--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.7.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "node-sass": "^8.0.0",
-    "nodemon": "^2.0.20"
+    "node-sass": "^8.0.0"
   }
 }
